--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="responsivo.css">
@@ -17,7 +18,7 @@
                     <h1>Luiz</h1>
                 </a></div>
             <div class="menu">
-                <a href="#">Home</a>
+                <a href="#" id="home">Home</a>
                 <a href="#">Sobre Mim</a>
                 <a href="#">Contato</a>
                 <a href="#">Outros</a>
@@ -71,7 +72,7 @@
             </ul>
             <div class="icons">
                 <div class="icon-home">
-                    <span><ion-icon name="home-outline"></ion-icon></span>
+                    <span><a href="#home"><ion-icon name="home-outline"></ion-icon></a></span>
                 </div>
                 <div class="icon-back">
                     <ion-icon name="return-down-back-outline"></ion-icon>
