--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </a></div>
             <div class="menu">
                 <a href="#" id="home">Home</a>
-                <a href="#">Sobre Mim</a>
+                <a href="sobre mim.html">Sobre Mim</a>
                 <a href="#">Contato</a>
                 <a href="#">Outros</a>
             </div>
