--- a/sobre mim.html
+++ b/sobre mim.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="sobremim.css">
     <link rel="stylesheet" href="responsivo.css">
+    <link rel="stylesheet" href="responsivosibremim.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
